--- a/service.yml
+++ b/service.yml
@@ -14,7 +14,7 @@ spec:
 
 
 ---
-
+apiVersion: v1
 kind: Service
 metadata:
   name: shopping-service
@@ -29,7 +29,7 @@ spec:
   type: NodePort
 
 ---
-
+apiVersion: v1
 kind: Service
 metadata:
   name: products-service
