--- a/deployment.yml
+++ b/deployment.yml
@@ -4,16 +4,16 @@ metadata:
   name: frontend-deployment
   namespace: monorepo
   labels:
-    app: frontend-deployment
+    app: challenge
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: frontend-deployment
+      app: challenge
   template:
     metadata:
       labels:
-        app: frontend-deployment
+        app: challenge
     spec:
       containers:
       - name: frontend-cont
@@ -26,16 +26,16 @@ metadata:
   name: shopping-deployment
   namespace: monorepo
   labels:
-    app: shopping-deployment
+    app: challenge
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: shopping-deployment
+      app: challenge
   template:
     metadata:
       labels:
-        app: shopping-deployment
+        app: challenge
     spec:
       containers:
       - name: shopping-cont
@@ -48,16 +48,16 @@ metadata:
   name: products-deployment
   namespace: monorepo
   labels:
-    app: products-deployment
+    app: challenge
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: products-deployment
+      app: challenge
   template:
     metadata:
       labels:
-        app: products-deployment
+        app: challenge
     spec:
       containers:
       - name: products-cont
