--- a/deployment.yml
+++ b/deployment.yml
@@ -40,7 +40,11 @@ spec:
       containers:
       - name: shopping-cont
         image: luxcrift/shopping:1.0.0
-
+        env:
+          - name: PRODUCTS_SERVICE
+            value: products-service
+          - name: SHOPPING_CART_SERVICE
+            value: shopping-service
 ---
 apiVersion: apps/v1
 kind: Deployment
